<resources>
    <string name="app_name">LostFoundApp</string>
    <string name="add">Add</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="contact_info">Contact Info</string>
    <string name="post">Post</string>
    <string name="remove">Remove</string>
    <string name="create_a_new_advert">CREATE A NEW ADVERT</string>
    <string name="show_all_lost_found_items"><![CDATA[SHOW ALL LOST & FOUND ITEMS]]></string>
    <string name="remove1">REMOVE</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description1">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="save">SAVE</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="found1">Found</string>
    <string-array name="item_types">
        <item>Lost</item>
        <item>Found</item>
    </string-array>
</resources>