<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="383dp"
            android:layout_height="72dp"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="383dp"
            android:layout_height="72dp"
            android:hint="@string/description" />

        <EditText
            android:id="@+id/contactInput"
            android:layout_width="383dp"
            android:layout_height="72dp"
            android:hint="@string/contact_info" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="383dp"
            android:layout_height="72dp"
            android:entries="@array/item_types" />

        <Button android:id="@+id/saveButton" android:text="@string/post"
            android:layout_width="match_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
